<resources>
    <string name="app_name">FlowBus</string>
    <string name="sendGlobalEvent">Send global event</string>
    <string name="sendActivityEvent">Send Activity event</string>
    <string name="sendFragmentEvent">Send Fragment event</string>
    <string name="jumpNextPage1">Open TestActivity</string>
    <string name="jumpNextPage2">Open TestFragmentActivity</string>
    <string name="jumpNextPage3">Open LoginActivity</string>
    <string name="sendCustomEvent">Send custom event</string>
    <string name="sendCustomEventDelay">Send delayed custom event</string>
    <string name="sendManyEvent">Send 200 events</string>
    <string name="sendEventGroup">Send events group</string>
    <string name="default_placeholder_log_text">----------------------------------------</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="account">account</string>
    <string name="login_requesting">Logging in...</string>
    <string name="login_successful">Login successful</string>
    <string name="login_failed">Login failed，Username and password cannot be empty.</string>
    <string name="register">Register and log in</string>
    <string name="register_requesting">Registering...</string>
    <string name="register_successful">Register successful</string>
    <string name="register_failed">Register failed,Username and password cannot be empty.</string>
</resources>
