<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/white"
    tools:context="com.logan.flowbus.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/autumn_wave"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/AppTheme.Toolbar"
        app:titleTextColor="@android:color/white" />

    <LinearLayout
        android:id="@+id/llGlobalEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <Button
            android:id="@+id/btnSendGlobalEvent"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/autumn_wave"
            android:text="@string/sendGlobalEvent"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvGlobalEvent01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_placeholder_log_text" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvGlobalEvent02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_placeholder_log_text" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvGlobalEvent03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_placeholder_log_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llActivityEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llGlobalEvent">

        <Button
            android:id="@+id/btnSendActivityEvent"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/autumn_wave"
            android:text="@string/sendActivityEvent"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llActivityEvent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvActivityEvent1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_placeholder_log_text" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvActivityEvent2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_placeholder_log_text" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvActivityEvent3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_placeholder_log_text" />
    </LinearLayout>

    <Button
        android:id="@+id/btnJumpNextPage"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:background="@color/autumn_wave"
        android:text="@string/jumpNextPage1"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llActivityEvent" />

    <Button
        android:id="@+id/btnJumpNextFragmentPage"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:background="@color/autumn_wave"
        android:text="@string/jumpNextPage2"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnJumpNextPage" />

</androidx.constraintlayout.widget.ConstraintLayout>